--- a/style.css
+++ b/style.css
@@ -7,13 +7,6 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh
-}
-
 .popup {
     width: 350px;
 }
@@ -51,6 +44,10 @@ body {
 
 .picked-colors header {
     justify-content: space-between;
+}
+
+.picked-colors header .title {
+    font-size: 1rem;
 }
 
 .picked-colors .clear-all {
